2025-xx-xx [0.20.0] (Requires I2P 2.9.0 or higher)
  - Support UDP announces
  - Fix dup ids in jetty.xml, existing installs must fix manually,
    s/<Ref id=/<Ref refid=/g
  - Add interval to stats page
  - Add stats to I2P stats subsystem
  - Remove ElGamal support

2024-04-07 [0.19.0]
  - Disable full scrape by default
  - Handle BiglyBT scrape URLs

2020-08-30 [0.18.0]
  - Enable both encryption types
  - Disable pack200

2019-11-19 [0.17.0]
  - Add more configuration, customization, and registration info to help page
  - Add variables for $VERSION and $SITENAME
  - Add custom CSS to docroot/tracker.css to allow customization and include
    alternative tracker-purple.css
  - Add favicon.png to docroot
  - Add custom icon for homepage
  - Add auto page reload for tracker stats (ajax with meta refresh fallback)
  - Add footer to /tracker with ZzzOT version and github link
  - Add config options to hide version footer on /tracker or change footer text
  - Tidy CHANGES.txt and add to plugin/
  - Start tunnel in background after first install
  - Changes for new installs only:
    - Change default sig type to EdDSA
    - Enhance presentation of help page
    - Modify docroot/index.html post-install to contain b32 footer
    - Only display warning about moving help.html if necessary
    - Add rewrite rules for /tracker/ and /tracker/index.html to web.xml
    - Add rewrite rules for /help and /help/ to jetty.xml
    - Replace jetty.servlet.DefaultServlet with I2PDefaultServlet in BaseContext.xml
      (requires I2P 0.9.31 or newer)

2017-05-21 [0.16.0]
  - Fix scrape response (requires I2P 0.9.30-8) (ticket #1994)

2017-03-11 [0.15.0]
  - Increase default limits, set I2CP tag options
  - Update eepsite configuration for Jetty 9 (I2P 0.9.30)

2015-05-28 [0.14.0]
  - Remove use of deprecated SimpleScheduler (ticket #1523)
  - Remove static structures
  - Use RandomIterator for efficiency

2014-11-29 [0.13.0]
  - Fix NPE on missing announce parameters